<resources>
    <string name="app_name">QuickShop</string>
    <string name="emailText">email address</string>
    <string name="passwordText">password</string>
    <string name="loginText">login</string>
    <string name="signupText">sign up</string>
    <string name="queryAccountAbsenceText">Don\'t have an account? Sign Up</string>
    <string name="queryAccountPresenceText">Have an account? Sign in</string>
    <string name="loginBanner">welcome!</string>
    <string name="signUpBanner">join us!</string>
    <string name="confirmPasswordText">confirm password</string>
    <string name="logOutText">log out</string>
    <string name="successfullyIn">You are in!</string>
    <string name="proofStatement">to verify this, your email must be</string>
    <string name="logOutRequestText">Fill free to log out at your own time</string>
    <string name="registerSpinnerPromptText">choose type to register as</string>
    <string name="registerTypeDeliverer">deliverer</string>
    <string name="registerTypeReceiver">receiver</string>
    <string name="profileLabelText">profile</string>
    <string name="tempToProfileModificationButton">Temp: to profile modification</string>
    <string name="firstNameHintText">first name</string>
    <string name="lastNameHintText">last name</string>
    <string name="postalAddressHintText">postal address</string>
    <string name="streetHintText">street</string>
    <string name="phoneNumberHintEditText">phone number</string>
    <string name="changeDetailButtonText">Change Details</string>
    <string name="backButtonText">go back</string>
</resources>
