<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/qs_gradient"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/signUpBanner"
            android:textColor="@color/darkGray"
            android:textSize="45sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailText"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_margin="0dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/signUpPasswordEditText"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordText"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPasswordText"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_margin="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:singleLine="true"
                android:inputType="textPassword"/>
            <Spinner
                android:id="@+id/RegisterTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/registerSpinnerPromptText"
                android:entries="@array/registerType"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="25dp"
            android:text="@string/signupText"
            android:textColor="@color/darkGray"
            android:background="@drawable/qs_button"/>
    </LinearLayout>
    <TextView
        android:id="@+id/queryAccountPresenceTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/queryAccountPresenceText"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="25dp"
        android:textColor="@color/darkGray"/>
</RelativeLayout>
