<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/qs_gradient"
    android:layout_marginBottom="25dp"
    android:paddingBottom="35dp">
    <LinearLayout
        android:id="@+id/textViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/firstNameHintText"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/lastNameHintText"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/modifyEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/emailText"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phoneNumberHintEditText"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/streetEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/streetHintText"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/postalAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:hint="@string/postalAddressHintText"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:singleLine="true" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewLayout"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButtonText"
            android:textColor="@color/darkGray"
            android:background="@drawable/qs_button"
            android:paddingLeft="@dimen/buttonPadding"
            android:paddingRight="@dimen/buttonPadding"
            android:layout_marginLeft="@dimen/buttonPadding"
            android:layout_marginRight="@dimen/buttonPadding"/>
        <Button
            android:id="@+id/changeDetailsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeDetailButtonText"
            android:textColor="@color/darkGray"
            android:background="@drawable/qs_button"
            android:paddingLeft="@dimen/buttonPadding"
            android:paddingRight="@dimen/buttonPadding"
            android:layout_marginLeft="@dimen/buttonPadding"
            android:layout_marginRight="@dimen/buttonPadding"
            />
    </LinearLayout>

</RelativeLayout>
</ScrollView>